Fix weird header alignment and make the controls slightly bigger.

--- a/mftb5/static/less/playlist.less
+++ b/mftb5/static/less/playlist.less
@@ -127,7 +127,6 @@ body.audio #controls {
   .inner {
     .inner();
     overflow: hidden;
-    font-size: 1.2em;
 
     p {
       position: relative;
@@ -142,7 +141,6 @@ body.audio #controls {
         &.transport {
           cursor: pointer;
 
-          font-size: .8em;
           width: 1.5em;
           
           &.pp {
